# pyJiraCli

./: .gitignore  .pylintrc  LICENSE  README.md  fields.json  issue_template.json  project.toml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  online.yml  test.yml
coding/src/: pyjira.py
coding/src/pyJiraCli/: __main__.py
design/: context.puml  deisgn.puml  use_case.puml
doc/: README.md  add_command.md
doc/commands/: edit.md  export.md  get_sprints.md  import.md  print.md  profile.md  scheme.md  search.md
doc/uml/: architecture.puml  context.puml  deployment.puml
examples/edit/: edit_issues.json
examples/import_issues/: README.md  component.json  multiple_issues.json  single_issue.json  sub_issues.json
examples/scripts/: README.md
examples/scripts/track_sprint_progress/: README.md  track_sprint_progress.py
examples/search/: README.md  search.bat  search.sh
examples/sprints/: README.md  sprints_in_board.json
src/pyJiraCli/: __init__.py  __main__.py  cmd_delete.py  cmd_edit.py  cmd_export.py  cmd_get_sprints.py  cmd_import.py  cmd_login.py  cmd_print.py  cmd_profile.py  cmd_scheme.py  cmd_search.py  crypto_file_handler.py  data_type.py  error_handler.py  error_type.py  errors.py  export_data.py  file_handler.py  file_helper.py  import_data.py  issue_constants.py  jira_issue.py  jira_server.py  print_data.py  print_type.py  printer.py  profile.py  profile_handler.py  ret.py  retval.py  search.py  set_login.py  test.py  version.py
tests/: conftest.py  test_empty.py  test_main.py
tests/offline/: test_help.py
tests/online/: test_01_profile.py  test_02_import_export.py  test_03_print.py  test_04_search.py  test_05_get_sprints.py  test_import.py  test_import_export.py  test_profile.py
tests/tools/: setup_jira_server.py
tools/: auto_py_to_exe_config.json  create_executable.bat
