[build-system]
requires = ["setuptools", "setuptools-scm", "wheel", "toml"]
build-backend = "setuptools.build_meta"

[project]
name = "pyJiraCli"
version = "2.1.0"
description = "A CLI tool to import and export Jira Issues between server and json files."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Timo Heitzmann", email = "heitzmann_timo@web.de" },
    { name = "Gabryel Reyes", email = "gabryelrdiaz@gmail.com" }
]
license = {text = "BSD 3-Clause"}
classifiers = [
    "License :: OSI Approved :: BSD 3-Clause",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]

dependencies = [
    "jira>=3.8.0",
    "toml>=0.10.2",
    "colorama>=0.4.6"
]

[project.optional-dependencies]
test = [
  "pytest > 5.0.0",
  "pytest-cov[all]"
]

[project.urls]
documentation = "https://github.com/NewTec-GmbH/pyJiraCli"
repository = "https://github.com/NewTec-GmbH/pyJiraCli"
tracker = "https://github.com/NewTec-GmbH/pyJiraCli/issues"

[project.scripts]
pyJiraCli = "pyJiraCli.__main__:main"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
