[metadata]
name = pyJiraCli
version = attr: pyJiraCli.version.__version__
description = A CLI tool to import and export Jira Issues between server and JSON files.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/NewTec-GmbH/pyJiraCli
author = "Timo Heitzmann, Gabryel Reyes, Juliance Kerpe, Andreas Merkle"
author_email = "heitzmann_timo@web.de, gabryelrdiaz@gmail.com, juliane.kerpe@newtec.de, andreas.merkle@newtec.de"
license = BSD 3-Clause
license_files = LICENSE
classifiers =
    License :: OSI Approved :: BSD 3-Clause
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls = 
    Documentation = https://github.com/NewTec-GmbH/pyJiraCli
    Source = https://github.com/NewTec-GmbH/pyJiraCli
    Tracker = https://github.com/NewTec-GmbH/pyJiraCli/issues

[options]
package_dir=
    =src
packages = find:
zip_safe = False
platforms = any
include_package_data = True
install_requires =
    jira >= 3.8.0
    toml >= 0.10.2
    colorama >= 0.4.6
python_requires = >=3.8
setup_requires =
    setuptools_scm
    wheel
    toml

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    pyJiraCli = pyJiraCli.__main__:main
